# Xirea-Desktop

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LlamaDocumentation.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/binaries/linux/: README.md
src-tauri/binaries/macos-arm64/: README.md
src-tauri/binaries/macos-x64/: README.md
src-tauri/binaries/windows/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: benchmark.rs  commands.rs  downloader.rs  gguf.rs  hf.rs  lib.rs  llama_runtime.rs  main.rs  providers.rs  system_info.rs  verify.rs
src/app/: WorkspaceRouter.tsx  router.tsx
src/components/layout/: ActivityPanel.tsx  AppShell.tsx  CommandPalette.tsx  Resizable.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx  WindowControls.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ContextMenu.tsx  DialogLayer.tsx  EmptyState.tsx  IconButton.tsx  Input.tsx  Modal.tsx  ProfileAvatar.tsx  Select.tsx  Skeleton.tsx  Spinner.tsx  Switch.tsx  Tabs.tsx  Textarea.tsx  Toast.tsx  Tooltip.tsx
src/features/archived/: ArchivedChatsView.tsx
src/features/chat/: ChatView.tsx  Composer.tsx  Markdown.tsx  MessageBubble.tsx
src/features/downloads/: DownloadsView.tsx
src/hooks/: useHotkeys.ts
src/lib/: llm.ts  tauri.ts  utils.ts
src/store/: chat.ts  dialog.ts  downloads.ts  files.ts  models.ts  prompts.ts  providers.ts  runtimeSettings.ts  settings.ts  ui.ts  usageStats.ts
src/types/: index.ts
(+6 files in other folders)
