[package]
name = "xirea-desktop"
version = "1.0.0"
description = "Xirea — Premium AI Desktop Assistant"
authors = ["Danyal Khattak"]
edition = "2021"
rust-version = "1.77"

# https://doc.rust-lang.org/cargo/reference/manifest.html#the-default-run-field
[lib]
name = "xirea_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
os_info = "3"
hostname = "0.4"
sysinfo = "0.32"
sys-locale = "0.3"
once_cell = "1"
futures-util = "0.3"
# `which` — locate the llama-server binary on PATH at runtime.
which = "6"
# `sha2` — SHA-256 verification of downloaded GGUF files.
sha2 = "0.10"
# `nix` — send SIGTERM to llama-server processes on Unix.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
panic = "abort"
strip = true
